Fix misalignment

--- a/src/amo/components/SearchFilters/styles.scss
+++ b/src/amo/components/SearchFilters/styles.scss
@@ -33,6 +33,7 @@
     height: 34px;
     display: inline-block;
     border-radius: 50%;
+    vertical-align: top;
 
     &.SearchFilter-ThemeColors-ColorItem--active {
       outline-color: $action-active-color;
@@ -41,7 +42,7 @@
     input[type='color'] {
       width: 100%;
       height: 100%;
-      opacity: 0; /* hidden, but captures clicks  to trigger the color dialog */
+      opacity: 0; /* hidden, but captures clicks to trigger the color dialog */
       padding: 0;
       border-radius: 50%;
       border: 0;
